--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 Django==3.1
 django-allauth==0.42.0
-psycopg2==2.8.5
+psycopg2-binary==2.8.5
+psycopg2==2.7.5
 moncashify==0.1.0
+django-environ==0.4.5
