moon walk into account

--- a/.env.template
+++ b/.env.template
@@ -10,3 +10,8 @@ DB_MK_PORT=5432
 #moncash
 MONCASH_CLIENT_ID=680e96ffecc2bc04bd2aa18d528f1de7
 MONCASH_SECRET_KEY=MHq_JAVxqABdWoKzcHO_YLPkOMrMBFq5Y8A-hwcd9MDBs_F1dgOY8dL0f2XstVpL 
+
+MAILGUN_API_KEY=
+MAILGUN_SENDER_DOMAIN=
+
+DEFAULT_FROM_EMAIL=
