--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ moncashify==0.1.0
 django-environ==0.4.5
 django-better-admin-arrayfield==1.3.0
 django-crispy-forms==1.9.0
+django-anymail==7.2.1
+django-countries==6.1.3
+django-phonenumber-field==4.0.0
+phonenumbers==8.12.7
+Pillow==7.2.0
