--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,6 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.7.8 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "esih-makerlab" 
+          heroku_app_name: "esihmakerlab" 
           heroku_email: "madsen@dokla.ht"
-          healthcheck: "https://esih-makerlab.herokuapp.com/health"
+          healthcheck: "https://esihmakerlab.herokuapp.com/health"
