--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,22 @@
+asgiref==3.3.1
+Babel==2.9.0
+certifi==2020.12.5
+chardet==4.0.0
 Django==3.1.5
-psycopg2-binary==2.8.6
-psycopg2==2.7.5
-moncashify==0.1.0
-django-environ==0.4.5
-django-better-admin-arrayfield==1.3.0
-django-crispy-forms==1.9.0
 django-anymail==7.2.1
+django-better-admin-arrayfield==1.3.0
 django-countries==6.1.3
+django-crispy-forms==1.9.0
+django-environ==0.4.5
 django-phonenumber-field==4.0.0
+idna==2.10
+moncashify==0.1.0
 phonenumbers==8.12.7
 Pillow==7.2.0
+psycopg2==2.7.5
+psycopg2-binary==2.8.6
+pytz==2020.5
+requests==2.25.1
+six==1.15.0
+sqlparse==0.4.1
+urllib3==1.26.2
