--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-countries==6.1.3
 django-crispy-forms==1.9.0
 django-environ==0.4.5
 django-phonenumber-field==4.0.0
+django-simple-coupons==0.5
 idna==2.10
 moncashify==0.1.0
 phonenumbers==8.12.7
