--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ django-simple-coupons==0.5
 idna==2.10
 moncashify==0.1.0
 phonenumbers==8.12.7
-Pillow==7.2.0
+pillow==9.1.1
 psycopg2==2.9.3
 pytz==2020.5
 requests==2.25.1
