Update error page config

--- a/.env.template
+++ b/.env.template
@@ -14,3 +14,4 @@ MONCASH_CLIENT_ID="680e96ffecc2bc04bd2aa18d528f1de7"
 MONCASH_SECRET_KEY="MHq_JAVxqABdWoKzcHO_YLPkOMrMBFq5Y8A-hwcd9MDBs_F1dgOY8dL0f2XstVpL"
 PORT="8080"
 STATIC_FILES_PATH="/"
+DEBUG=True
